# TobiiProNano

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.hpp  recording.hpp  signal_type.hpp
src/: mainwindow.cpp  recording.cpp
window/: mainwindow.ui
